form field with divs

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,8 +1,12 @@
 <h2>Sign Page</h2>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {% for field in form %}
+        <div>
+            {{field.label}}
+            {{field}}
+        </div>
+    {% endfor %}
     <button type="submit">Register</button>
     <br><br>
-    <a href="{% url 'home' %}">Home</a>
 </form>
