create view/update profile page

--- a/users/templates/users/details.html
+++ b/users/templates/users/details.html
@@ -1,1 +1,12 @@
-<h1>Detail</h1>
+<h2>Profile Page</h2>
+<form method="post">
+    {% csrf_token %}
+    {% for field in form %}
+        <div>
+            {{field.label}}
+            {{field}}
+        </div>
+    {% endfor %}
+    <br><br>
+    <button type="submit">Update</button>
+</form>
