show only user groups on /groups url

--- a/groups/templates/groups/user-groups.html
+++ b/groups/templates/groups/user-groups.html
@@ -1,6 +1,6 @@
 <h2>My Groups</h2>
 {% for group in user_groups %}
     <div>
-        <a href="/group/{{group.id}}">{{group.name}}</a>
+        <a href="/groups/{{group.id}}">{{group.name}}</a>
     </div>
 {% endfor %}
