show correct name near balance

--- a/groups/templates/groups/group.html
+++ b/groups/templates/groups/group.html
@@ -8,7 +8,7 @@
 
 <div>
     {% for user in group_users %}
-        {{user.profile.name}}
+        {{user.profile.full_name}}
         {{user.balance}} PLN
     {% endfor %}
 </div>
