separate balance and name in group view

--- a/groups/templates/groups/group.html
+++ b/groups/templates/groups/group.html
@@ -8,8 +8,8 @@
 
 <div>
     {% for user in group_users %}
-        {{user.profile.full_name}}
-        {{user.balance}} PLN
+    <p>{{user.profile.full_name}}</p>
+    <p>{{user.balance}} PLN</p>
     {% endfor %}
 </div>
 
