--- a/groups/templates/groups/group.html
+++ b/groups/templates/groups/group.html
@@ -14,7 +14,17 @@
 <h4>Group Users' balance</h4>
 <div>
     {% for user in group_users %}
-        <p>{{user.profile.full_name}} | balance is {{user.balance}} PLN</p>
+        <div>
+            <p>{{user.profile.full_name}} | balance is {{user.balance}} PLN</p>
+
+            {% for transfer in cash_transfers %}
+                {% if transfer.sender == user %}
+                    <p>owes {{transfer.amount}} to {{transfer.receiver}}</p>
+                {% elif transfer.receiver == user %}
+                    <p>gets back {{transfer.amount}} from {{transfer.sender}}</p>
+                {% endif %}
+            {% endfor %}
+        </div>
     {% endfor %}
 </div>
 
