--- a/groups/templates/groups/user-groups.html
+++ b/groups/templates/groups/user-groups.html
@@ -3,4 +3,6 @@
     <div>
         <a href="/groups/{{group.id}}">{{group.name}}</a>
     </div>
+
+    <a href="create-group">Create new group</a>
 {% endfor %}
