--- a/groups/templates/groups/group.html
+++ b/groups/templates/groups/group.html
@@ -3,7 +3,10 @@
 <h4>Expenses</h4>
 <div>
     {% for expense in group_expenses %}
-        <p>{{expense}} <a href="{% url 'expense' expense.id %}">Edit</a> </p>
+        <div>{{expense}}
+            <a href="{% url 'expense' expense.id %}">Edit</a>
+            <a href="{% url 'delete-expense' expense.id %}">Delete</a>
+        </div>
     {% endfor %}
 </div>
 
