base for settle up functionality

--- a/groups/templates/groups/group.html
+++ b/groups/templates/groups/group.html
@@ -15,6 +15,7 @@
 </div>
 
 <h4>Group Users' balance</h4>
+<a href="{% url 'settle-up' %}">Settle Up</a>
 <div>
     {% for user in group_users %}
         <div>
