back to group link from Expense and Settle-Up view

--- a/groups/templates/groups/expense.html
+++ b/groups/templates/groups/expense.html
@@ -5,6 +5,8 @@
     <button type="submit">Submit</button>
 </form>
 
+<a href="{% url 'detail' group_id %}">Back to group</a>
+
 {% if expense_comments %}
     <h3>Expense comments</h3>
     {% for comment in expense_comments %}
