--- a/groups/templates/groups/group.html
+++ b/groups/templates/groups/group.html
@@ -1,5 +1,7 @@
-<h2>{{group_data.name}}</h2>
+{% extends 'main.html' %}
+{% block content %}
 
+<h2>{{group_data.name}}</h2>
 <h4>Expenses</h4>
 <div>
     {% for expense in group_expenses %}
@@ -32,3 +34,4 @@
     {% endfor %}
 </div>
 
+{% endblock %}
