add Balances and money transfer info to the group view

--- a/groups/templates/groups/group.html
+++ b/groups/templates/groups/group.html
@@ -1,37 +1,61 @@
 {% extends 'main.html' %}
+{% load static %}
 {% block content %}
 
-<h2>{{group_data.name}}</h2>
-<h4>Expenses</h4>
-<div>
-    {% for expense in group_expenses %}
-        <div>{{expense}}
-            <a href="{% url 'expense' expense.id %}">Edit</a>
-            <a href="{% url 'delete-expense' expense.id %}">Delete</a>
+<section class="main">
+    <div class="container">
+        <div class="main__wrapper">
+            <aside class="side__bar">
+                <ul>
+                    <li><span class="active"></span><a href="#" class="custom-icon side__bar-icon" style="background-image: url({% static 'media/users.svg' %});"></a></li>
+                    <li><span ></span><a href="#" class="custom-icon side__bar-icon" style="background-image: url({% static 'media/settings.svg' %});"></a></li>
+                </ul>
+            </aside>
+            <div class="main__content">
+                <div class="main__content-item">
+                    <div class="item__title">Balances</div>
+                    <ul>
+                        {% for user in group_users %}
+                            <li>{{user.profile.full_name}}'s balance is {{user.balance}} PLN</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="main__content-item group__det">
+                   <div class="item__header">
+                        <div class="item__header-title">{{group_data.name}}</div>
+                        <div class="buttons__box">
+                            <button onclick="location.href='/groups/add-expense/'" type="button">
+                                Add EXP
+                            </button>
+                            <button onclick="location.href='/groups/settle-up/'" type="button">
+                                Settle Up
+                            </button>
+                        </div>
+                    </div>
+                    <table class="main__table">
+                        {% for expense in group_expenses %}
+                            <tr class="row">
+                                <td>{{expense.created_at}}</td>
+                                <td>{{expense.title}}</td>
+                                <td>{{expense.price}}</td>
+                                <td>You owe 10zł</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+
+                </div>
+                <div class="main__content-item">
+                    <div class="item__title">Money Transfers</div>
+                    <ul>
+                        {% for transfer in cash_transfers %}
+                            <li>{{transfer.sender.profile.full_name}} owes {{transfer.amount}}
+                                to {{transfer.receiver.profile.full_name}}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
         </div>
-    {% endfor %}
-</div>
-
-<div>
-    <a href="{% url 'add-expense' %}">Add Expense</a>
-</div>
-
-<h4>Group Users' balance</h4>
-<a href="{% url 'settle-up' %}">Settle Up</a>
-<div>
-    {% for user in group_users %}
-        <div>
-            <p>{{user.profile.full_name}} | balance is {{user.balance}} PLN</p>
-
-            {% for transfer in cash_transfers %}
-                {% if transfer.sender == user %}
-                    <p>owes {{transfer.amount}} to {{transfer.receiver}}</p>
-                {% elif transfer.receiver == user %}
-                    <p>gets back {{transfer.amount}} from {{transfer.sender}}</p>
-                {% endif %}
-            {% endfor %}
-        </div>
-    {% endfor %}
-</div>
+    </div>
+</section>
 
 {% endblock %}
