--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,12 +17,11 @@
                         <div class="user">
                             <div class="custom-icon user__img"style="background-image: url();"></div>
                             <div class="user__name">ADD USERNAME</div>
-
                         </div>
                         <div class="user__menu">
                                 <ul>
-                                    <li><a href="#">Profile</a></li>
-                                    <li><a href="#">Logout</a></li>
+                                    <li><a href="{% url 'profile' logged_user.id %}">Profile</a></li>
+                                    <li><a href="{% url 'logout-user' %}">Logout</a></li>
                                 </ul>
                         </div>
                     </li>
