--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,10 +1,13 @@
-html{
-    box-sizing: border-box;
+html {
+   box-sizing: border-box;
 }
-*,
-*::before,
-*::after{
-    box-sizing: inherit;
+
+body {
+   position: relative;
+   overflow-x: hidden;
+   font-family: 'Montserrat', sans-serif;
+   padding: 0;
+   margin: 0;
 }
 a{
    display: inline-block;
@@ -21,14 +24,12 @@ li{
    display: inline-block;
 }
 
-body{
-   overflow-x: hidden;
-   font-family: 'Montserrat', sans-serif;
-}
-.container{
-   max-width: 1400px;
+
+/* .container{
+   max-width: 1200px;
    margin: 0 auto;
-}
+   background: #fff;
+} */
 .header__inner{
    display: flex;
    justify-content: space-between;
@@ -50,6 +51,9 @@ body{
    border-radius: 50%;
    width: 30px;
    height: 30px;
+   border: none;
+   outline: none;
+   background-color: transparent;
 }
 .header__menu li+ li{
    margin-left: 28px;
@@ -71,44 +75,22 @@ body{
    right: -4px;
    top: -4px;
 }
-.user__box{
+
+
+.groups__box{
    position: relative;
    cursor: pointer;
+   min-width: 240px;
+   height: 30px;
+   
 }
-.user{
-   position: relative;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   text-align: center;
-   padding-right: 42px;
-   margin-right: 28px;
-}
-
-
-.user__img {
-   background-color: #7B85E0;
-}
-.user__name {
-   padding-left: 20px;
-   color: #898888;
-   font-size: 18px;
-   line-height: 22px;
-
-
-}
-.user::after{
-   content: url(media/arrow-down.svg);
-   position: absolute;
-   right: 0;
-}
-.user__box:hover > .user__menu {
+.groups__box:hover > .groups__menu, .user__box:hover > .user__menu {
    height: auto;
    padding: 5px;
    overflow: auto;
    z-index: 100;
 }
-.user__menu {
+.groups__menu, .user__menu{
    position: absolute;
    background-color: transparent;
    -webkit-transition: all 0.3s;
@@ -122,29 +104,84 @@ body{
    background: #fff;
 
 }
-
-.user__menu li{
+.user__name::after{
+   content: url(media/arrow-down.svg);
+   position: absolute;
+   right: 0px;
+}
+.groups__menu li{
    display: block;
-   padding: 3px;
+   box-shadow: 0px 4px 8px rgba(56, 70, 200, 0.14);
+   padding: 5px;
    text-align: center;
+
 }
-.user__menu li + li{
-   margin-left: 0;
-}
-.user__menu a {
+.groups__menu a {
    font-size: 18px;
    color: #898888;
    margin-bottom: 10px;
-   text-align: center;
 }
-.user__menu a:hover{
+
+.groups__menu a:hover, .user__menu a:hover{
    color: #7B85E0;
    font-weight: 500;
 }
+
+.user__box{
+   position: relative;
+   cursor: pointer;
+}
+.groups__title, .user{
+   position: relative;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   text-align: center;
+   padding-right: 35px;
+}
+.user{
+   padding-right: 42px;
+   margin-right: 28px;
+}
+.groups__menu li + li, .user__menu li + li{
+   margin-left: 0;
+}
+
+.user__img {
+   background-color: #7B85E0;
+}
+.user__name {
+   padding-left: 20px;
+   color: #898888;
+   font-size: 18px;
+   line-height: 22px;
+   min-width: 150px; 
+}
+.groups__title{
+   color: #7B85E0;
+   text-transform: uppercase;
+   font-weight: 600;
+
+}
+.user__menu li{
+   padding: 3px;
+   text-align: center;
+   box-shadow: none;
+}
+
+.user__menu a {
+   text-align: center;
+}
+.main{
+   background:#EEEFFB;
+
+}
 .main__wrapper{
    display: flex;
+   height:calc(100vh - 60px)
 }
 .side__bar{
+   background: #fff;
    width: 90px;
    margin-right: 20px;
 }
@@ -172,12 +209,11 @@ body{
    left:0;
 }
 .main__content{
-   background:#EEEFFB;
-   min-width: 100%;
-   height: 100vh;
-   padding: 50px 25px;
+
+   padding: 50px 35px;
    display: flex;
    justify-content: space-between;
+   width: 100%;
 }
 .main__content-item{
    width: fit-content;
@@ -228,14 +264,14 @@ body{
 }
 .main__table{
    border-collapse:separate; 
-   border-spacing: 1em 2em;
+   border-spacing: 1em 3em;
 }
 .main__table tr{
    box-shadow: 0px 4px 8px rgba(56, 70, 200, 0.14);
 
 }
 .main__table td{
-   padding: 10px 25px;
+   padding: 10px;
 }
 .buttons__box button{
    color: #fff;
@@ -249,4 +285,22 @@ body{
    padding: 3px;
    filter: drop-shadow(4px 4px 3px rgba(0, 0, 0, 0.25)) drop-shadow(-4px -4px 4px rgba(221, 221, 221, 0.2));
    margin-right: 10px;
+   cursor: pointer;
+}
+.cell .custom-icon{
+   width: 25px;
+   height: 25px;
+   border-radius: 0;
+   cursor: pointer;
+}
+
+.balances {
+   color: #F15634;
+}
+.balances span{
+   font-weight: bold;
+   font-size: 14px;
+}
+.green {
+   color: #0BCB2A;
 }
