--- a/groups/templates/groups/group.html
+++ b/groups/templates/groups/group.html
@@ -3,56 +3,63 @@
 {% block content %}
 
 <section class="main">
-    <div class="container">
-        <div class="main__wrapper">
-            <aside class="side__bar">
+    <div class="main__wrapper">
+        <aside class="side__bar">
+            <ul>
+                <li><span class="active"></span><a href="#" class="custom-icon side__bar-icon" style="background-image: url({% static 'media/right.svg' %});"></a></li>
+                <li><span ></span><a href="#" class="custom-icon side__bar-icon" style="background-image: url({% static 'media/info.svg' %});"></a></li>
+            </ul>
+        </aside>
+        <div class="main__content">
+            <div class="main__content-item">
+                <div class="item__title">Balances</div>
                 <ul>
-                    <li><span class="active"></span><a href="#" class="custom-icon side__bar-icon" style="background-image: url({% static 'media/users.svg' %});"></a></li>
-                    <li><span ></span><a href="#" class="custom-icon side__bar-icon" style="background-image: url({% static 'media/settings.svg' %});"></a></li>
+                    {% for user in group_users %}
+                        <li>{{user.profile.full_name}}'s balance is {{user.balance}} PLN</li>
+                    {% endfor %}
                 </ul>
-            </aside>
-            <div class="main__content">
-                <div class="main__content-item">
-                    <div class="item__title">Balances</div>
-                    <ul>
-                        {% for user in group_users %}
-                            <li>{{user.profile.full_name}}'s balance is {{user.balance}} PLN</li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <div class="main__content-item group__det">
-                   <div class="item__header">
-                        <div class="item__header-title">{{group_data.name}}</div>
-                        <div class="buttons__box">
-                            <button onclick="location.href='/groups/add-expense/'" type="button">
-                                Add EXP
-                            </button>
-                            <button onclick="location.href='/groups/settle-up/'" type="button">
-                                Settle Up
-                            </button>
-                        </div>
+            </div>
+            <div class="main__content-item group__det">
+               <div class="item__header">
+                    <div class="item__header-title">{{group_data.name}}</div>
+                    <div class="buttons__box">
+                        <button onclick="location.href='/groups/add-expense/'" type="button">Add EXP</button>
+                        <button onclick="location.href='/groups/settle-up/'" type="button">Settle Up</button>
                     </div>
-                    <table class="main__table">
-                        {% for expense in group_expenses %}
-                            <tr class="row">
-                                <td>{{expense.created_at}}</td>
-                                <td>{{expense.title}}</td>
-                                <td>{{expense.price}}</td>
-                                <td>You owe 10zł</td>
-                            </tr>
-                        {% endfor %}
-                    </table>
+                </div>
+                <table class="main__table">
+                    {% for expense in group_expenses %}
+                        <tr class="row">
+                            <td>{{expense.created_at}}</td>
+                            <td>{{expense.title}}</td>
+                            <td>{{expense.price}}zł</td>
 
-                </div>
-                <div class="main__content-item">
-                    <div class="item__title">Money Transfers</div>
-                    <ul>
-                        {% for transfer in cash_transfers %}
-                            <li>{{transfer.sender.profile.full_name}} owes {{transfer.amount}}
-                                to {{transfer.receiver.profile.full_name}}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
+                            <td class = "cell">
+                                <button class="custom-icon"
+                                        onclick="location.href='{% url 'expense' expense.id %}'"
+                                        style="background-image: url({% static 'media/edit-2.svg' %});">
+                                </button>
+                            </td>
+
+                            <td class = "cell">
+                                <button class="custom-icon"
+                                        onclick="location.href='{% url 'delete-expense' expense.id %}'"
+                                        style="background-image: url({% static 'media/trash-2.svg' %});">
+                                </button>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+
+            </div>
+            <div class="main__content-item">
+                <div class="item__title">Money Transfers</div>
+                <ul>
+                    {% for transfer in cash_transfers %}
+                        <li>{{transfer.sender.profile.full_name}} owes {{transfer.amount}}
+                            to {{transfer.receiver.profile.full_name}}</li>
+                    {% endfor %}
+                </ul>
             </div>
         </div>
     </div>
