--- a/groups/templates/groups/expense.html
+++ b/groups/templates/groups/expense.html
@@ -1,3 +1,67 @@
+{% extends 'main.html' %}
+{% load static %}
+{% block content %}
+
+<section class="expence">
+    <div class="main__wrapper">
+        <form method="POST" action="" class="form">
+            {% csrf_token %}
+            <div class="left__content">
+                <div class="form__title">Expence</div>
+
+                <div class="form__item">
+
+                    <div class="form__group">
+                        <label for="title"> Title</label>
+                        {{form.title}}
+<!--                        <input type="text" id="title">-->
+                    </div>
+                    <div class="form__group">
+<!--                        <input type="text" id="price">-->
+                        {{form.price}}
+                        <label for="price">Price</label>
+                    </div>
+                    <div class="form__group">
+                        <label for="date"> Date</label>
+<!--                        <input type="text" id="date">-->
+                        {{form.paid_date}}
+                    </div>
+                </div>
+                <div class="form__item">
+                    <div class="form__box">
+                        <div class="form__group">
+                            <label>{{form.paid_by.label}}</label>
+                            {{form.paid_by}}
+                        </div>
+
+                    </div>
+                    <div class="form__box">
+                        <div class="input__title">Split with</div>
+                        <div class="form__menu groups__menu">
+                            {{form.split_with}}
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="form__item comment">
+                    <div class="form__group comment__group">
+                        <label for="comment"> Comment</label>
+                        {{form.comment}}
+                    </div>
+                </div>
+            </div>
+
+            <div class="right__content">
+                <div class="expence__img" style="background-image: url({% static 'media/Teamwork.png' %});"></div>
+                <button type="submit" class="custom__btn">Submit</button>
+            </div>
+        </form>
+    </div>
+</section>
+
+{% endblock %}
+
 <h2>Expense</h2>
 <form method="POST">
     {% csrf_token %}
