--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="header__inner">
                 <div class="header__logo">
-                 <a href="">
+                 <a href="{% url 'user-groups' %}">
                 Slash
                 </a>
                 </div>
