show logged user in navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,7 +34,7 @@
                     <li class="user__box">
                         <div class="user">
                             <div class="custom-icon user__img"style="background-image: url();"></div>
-                            <div class="user__name">USERNAME</div>
+                            <div class="user__name">{{logged_user.username}}</div>
 
                         </div>
                         <div class="user__menu  groups__menu">
