--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,3 +1,4 @@
+{% load static %}
 html {
    box-sizing: border-box;
 }
@@ -97,7 +98,7 @@ li{
 
 }
 .user__name::after{
-   content: url(media/arrow-down.svg);
+   content: url(/static/media/arrow-down.svg);
    position: absolute;
    right: 0px;
 }
@@ -463,7 +464,8 @@ textarea
    width: 17px;
    height: 17px;
    background-size: cover;
-   background-image: url(media/arrow-down.svg);
+
+   background-image: url(/static/media/arrow-down.svg);
    background-repeat: no-repeat;
 }
 .form__menu{
